--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
       "jsx-a11y",
       "import"
   ],
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2016,
     "sourceType": "module",
